# isolang-rs

./: .rustfmt.toml  .travis.yml  Cargo.toml  LICENSE.md  Language.t.html  README.md  build.rs  enum.Language.html  index.html  iso-639-3.tab  iso639-autonyms.tsv  sidebar-items.js
.github/workflows/: rust.yml
src/: diesel_impls.rs  isotable.rs  lib.rs  serde_impl.rs
tests/: generate_static_table.rs
tests/migrations/20171129174755_test_language/: up.sql
