[package]
authors = ["Sebastian Humenda <shumenda@gmx.de>"]
description = "Efficient, static lookup table for ISO 639 language codes"
documentation = "https://docs.rs/isolang"
keywords = [
    "iso",
    "iso-639",
    "language",
    "language-code",
    "autonym"
]
license = "Apache-2.0"
name = "isolang"
readme = "README.md"
repository = "https://github.com/humenda/isolang-rs"
version = "2.3.0"
edition = "2021"

[dependencies]
phf = "0.11"

[dependencies.serde]
optional = true
version = "1.0"

[dependencies.async-graphql]
optional = true
version = "6.0"

[features]
default = ["english_names"]
english_names = []
lowercase_names = []
local_names = []
list_languages = []
async-graphql = ["dep:async-graphql"]

[dev-dependencies]
phf_codegen = "0.11"
serde_json = "1.0"
