[package]
authors = ["Sebastian Humenda <shumenda@gmx.de>"]
description = "Efficient, static lookup table for ISO 639 language codes"
documentation = "https://docs.rs/isolang"
keywords = [
    "iso",
    "iso-639",
    "language",
    "language-code",
    "autonym"
]
license = "Apache-2.0"
name = "isolang"
readme = "README.md"
repository = "https://github.com/humenda/isolang-rs"
version = "2.4.0"
edition = "2021"

[dependencies]
phf = "0.11"

[dependencies.serde]
optional = true
version = "1.0"

[dependencies.async-graphql]
optional = true
version = "7"

[features]
default = ["english_names"]
# all English names of langauges for lookup (increases binary size considerably)
english_names = []
# ignore casing of English language names
lowercase_names = []
# add autonyms, i.e. local language names, as a lookup option (increases binary
# size)
local_names = []
# add an iterator over all available langauges
list_languages = []
# add async-graphql support
async-graphql = ["dep:async-graphql"]

[dev-dependencies]
phf_codegen = "0.11"
serde_json = "1.0"
